agregado Cliente y servidor agregado metodos a Test